# HeartSafeRouteAI

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
apps/backend/: main.py
frontend/: index.html
server/: app.py
